# EndoCA-VQA

./: .env.example  .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
configs/: asr.yaml  benchmarks.yaml  models.yaml
data/: README.md
docs/: README_zh.md  data.md  model_usage.md
results/paper/: README.md
results/paper/ablation/: no_atomic_ablation.csv
results/paper/asr/: asr_results.csv
results/paper/benchmark/: endoca_core_results.csv  endoca_diagnostic_results.csv
src/endoca/: __init__.py
src/endoca/asr/: __init__.py  build.py  run.py  run_api.py  score.py
src/endoca/data/: prepare.py
src/endoca/evaluation/: __init__.py  answer_rules.py  composition.py  normalization.py  score.py
src/endoca/inference/: __init__.py  api_runner.py  api_vlm.py  open_vlm.py  runner.py
src/endoca/visualization/: __init__.py  paper_figures.py
tests/: test_asr.py  test_manifests.py  test_metrics.py  test_normalization.py  test_paper_results.py
