[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endoca"
version = "0.1.0"
description = "EndoCA benchmark evaluation and Atomic-Support Reconciliation for endoscopic VQA"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Yuhao Liu"},
  {name = "Cheng Zhao"},
  {name = "Guanghui Yue"},
]
dependencies = [
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
vlm = [
  "accelerate==1.13.0",
  "peft>=0.14",
  "qwen-vl-utils==0.0.14",
  "transformers==4.57.6",
]
plots = ["matplotlib>=3.8"]
dev = ["pytest>=8.0"]

[project.urls]
Paper = "https://arxiv.org/abs/XXXX.XXXXX"
Repository = "https://github.com/Luious-LYH/EndoCA-VQA"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
